--- a/style.css
+++ b/style.css
@@ -1,9 +1,7 @@
-@font-face{
-    font-family: 'open sans';
-    src: url('https://fonts.googleapis.com/css2?family=Cormorant+SC&family=Nunito+Sans&family=Open+Sans:wght@600&display=swap')
-}
+
 body{
     background-color: #fff;
+    font-family: 'Open Sans';
 }
 
 .introduction{
@@ -14,7 +12,6 @@ body{
     margin-right: 20%;
 }
 h1{
-    font-family: 'open sans';
     font-size: 56px;
     font-weight: 700;
     line-height: 64px;
@@ -37,11 +34,7 @@ h4{
 p{
     font-family: 'open sans';
     font-size: 18px;
-}
-b{
-    font-family: 'open sans';
-    font-weight: 600;
-    
+    font-weight: 100;
 }
 h6{
     font-size: 16px;
